Week-5/day-7/k8s-multi-tenant-saas/k8s-manifests/00-namespace.yaml
# This creates an isolated "room" inside the cluster called saas-app.
# Everything for this project lives inside this room.
apiVersion: v1
kind: Namespace
metadata:
  name: saas-app
