Week-5/day-7/k8s-multi-tenant-saas/k8s-manifests/04-postgres-deployment.yaml
# Deployment = tells Kubernetes "always keep 1 copy of Postgres running".
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: saas-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
