Week-5/day-7/k8s-multi-tenant-saas/k8s-manifests/05-postgres-service.yaml
# Service = a stable internal address for Postgres, so the backend can always find it
# by the name "postgres-service" even if the Pod restarts and gets a new IP.
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: saas-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
